# CellularAutomata

./: Cargo.toml  README.md
.github/workflows/: linux.yaml  macos.yaml  windows.yaml
src/: automata.rs  ca.rs  config.rs  dnca.rs  filter.rs  lib.rs  main.rs  nca.rs  nca_gpu.rs  ui.rs
src/automatas/: blur.rs  blur2.rs  cells.rs  conway.rs  ghosts.rs  mod.rs  rainbows.rs  test.rs  worms.rs  worms2.rs
src/shaders/: approximated_inverted_gaussian.wgsl  ca.wgsl  inverted_gaussian.wgsl  nca.wgsl  nca_gpu.wgsl
src/shaders/activations/: approximated_inverted_gaussian.wgsl  conway.wgsl  sigmoid.wgsl  tanh.wgsl  test.wgsl
src/shaders/color_filters/: blue.wgsl  gradient.wgsl  gray.wgsl  green.wgsl  heatmap.wgsl  red.wgsl
